# chat-command-centre-backend

./: Dockerfile  README.md  pyproject.toml
command_centre_python/: __init__.py
command_centre_python/core/: __init__.py  db.py  decision_maker.py  entities.py  event_manager.py  llm_integration.py  models.py  server.py  system.py
command_centre_python/modules/ai_ml/: __init__.py  azure_ai.py  google_ai_platform.py  ibm_watson.py  openai.py  tensorflow.py
command_centre_python/modules/analytics_monitoring/: __init__.py  datadog.py  elastic_stack.py  grafana.py  new_relic.py  prometheus.py
command_centre_python/modules/calendar/: __init__.py  calendar_trigger.py
command_centre_python/modules/cloud_providers/: aws_dispatcher.py  aws_s3_trigger.py  aws_trigger.py  azure_dispatcher.py  dispatcher_base.py
command_centre_python/modules/cloud_storage/: __init__.py  aws_s3.py  azure_blob_storage.py  box.py  dropbox.py  onedrive.py
command_centre_python/modules/cms/: __init__.py  contentful.py  drupal.py  ghost.py  strapi.py  wordpress.py
command_centre_python/modules/communication_tools/: __init__.py  discord.py  email_received_trigger.py  email_sender.py  email_trigger.py  messaging_app_trigger.py  microsoft_teams.py  sms_sender.py  telegram.py  webhook_trigger.py  whatsapp.py  zoom.py
command_centre_python/modules/contacts/: __init__.py  contact.py
command_centre_python/modules/customer_support/: __init__.py  freshdesk.py  intercom.py  livechat.py  salesforce_service_cloud.py  zendesk.py  (+1 more)
command_centre_python/utils/: loggers.py  triggers.py
docs/: index.md
(+101 files in other folders)
